--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+
+    implementation project(':Adeona Ad Inject Android SDK')
+
+
+
 }
